New Main Menu & Object Merge
This was what I was working on previous to th new master.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,6 +127,15 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/Engine.UserInterfaceSettings]
+DefaultCursor=/Game/UI/CursorBP.CursorBP_C
+CrosshairsCursor=/Game/UI/CursorBP.CursorBP_C
+HandCursor=/Game/UI/CursorBP.CursorBP_C
+GrabHandCursor=/Game/UI/CursorBP.CursorBP_C
+GrabHandClosedCursor=/Game/UI/CursorBP.CursorBP_C
+SlashedCircleCursor=/Game/UI/CursorBP.CursorBP_C
+TextEditBeamCursor=/Game/UI/CursorBP.CursorBP_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
