Nursery Level, Fixed Baby Materials

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,13 +128,13 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.UserInterfaceSettings]
-DefaultCursor=/Game/UI/CursorBP.CursorBP_C
-CrosshairsCursor=/Game/UI/CursorBP.CursorBP_C
-HandCursor=/Game/UI/CursorBP.CursorBP_C
-GrabHandCursor=/Game/UI/CursorBP.CursorBP_C
-GrabHandClosedCursor=/Game/UI/CursorBP.CursorBP_C
-SlashedCircleCursor=/Game/UI/CursorBP.CursorBP_C
-TextEditBeamCursor=/Game/UI/CursorBP.CursorBP_C
+DefaultCursor=None
+CrosshairsCursor=None
+HandCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+TextEditBeamCursor=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -173,5 +173,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
