Auto stash before merge of "master" and "origin/master"

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D1691491449F9403892699B95ED53B36
-ProjectName=Top Down BP Game Template
+ProjectName=LittleSprouts
 
 
 [StartupActions]
